--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+@layer components {
+    .main-container{
+      @apply w-screen h-screen flex flex-col items-center justify-center overflow-hidden;
+    }
+    .header{
+        @apply w-full flex justify-center  gap-16 m-auto items-center bg-black text-white
+    }
+    .logo{
+        @apply w-10 h-15
+    }
+    .title{
+        @apply text-2xl font-sans font-normal 
+    }
+    .welcome-container{
+        @apply w-full  bg-red-300 flex flex-col justify-center items-center m-auto mt-8
+    }
+    .welcome-message{
+        @apply font-sans text-2xl text-gray-800 text-bold
+    }
+    .create-text{
+        @apply text-xl font-sans text-gray-900 translate-x-0
+    }
+
+  
 }
