--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
     .main {
-        @apply max-w-sm xl:w-[100vw] m-auto  h-[100vh] flex-col justify-center items-center border-2 border-gray-100 px-0 rounded-lg
+        @apply max-w-sm xl:w-[100vw] m-auto  min-h-[100vh] flex-col justify-center items-center border-2 border-gray-100 px-0 rounded-lg
     }
 
     .header {
@@ -59,7 +59,7 @@
     @apply fixed flex justify-around bottom-0 gap-20
 }
 .dr-tech{
-    @apply text-lg text-gray-900 font-bold ml-2
+    @apply text-lg text-gray-900 font-bold ml-2 
 }
 .privacy{
     @apply text-lg text-gray-500 
@@ -80,21 +80,27 @@
 .success{
     @apply text-gray-900 
 }
-
+/* styling the select option */
+.select-option{
+    @apply w-full h-10 bg-gray-100  border-2 border-gray-500
+}
 /* Styling the diary Item  */
 .Item-card{
-    @apply px-3 bg-teal-50  w-full h-1/2
+    @apply   rounded-sm w-11/12 h-1/2  mb-5  ml-4 bg-gray-50
 }
 .Item-header{
-    @apply w-full flex justify-around items-center m-auto 
+    @apply w-full flex justify-start gap-5 px-2 items-center m-auto 
 }
 
 .Item-img{
-    @apply bg-red-500 border-4 rounded-full w-1/4
+    @apply   h-1/2  w-1/4  rounded-sm
 }
 .Item-image{
-    @apply w-full h-full
+    @apply w-full h-16 rounded-sm
 } 
+.item-details{
+    @apply justify-start
+}
 .Item-name{
     @apply font-sans text-xl text-gray-900 font-semibold
 }
@@ -106,27 +112,30 @@
     @apply text-red-500  
 }
 .Item-body{
-    @apply w-full h-full m-auto
+    @apply w-full h-full m-auto px-2
 }
 .Item-message{
-    @apply text-gray-900 text-lg m-auto
+    @apply text-gray-900 text-lg m-auto leading-normal
 
 }
 .new-entry{
-    @apply max-w-sm xl:w-[100vw] m-auto  h-[100vh] flex-col justify-center items-center border-2 border-gray-100 px-0 rounded-lg
+    @apply max-w-sm xl:w-[100vw] m-auto  h-[100vh] flex-col justify-start  items-center border-2 border-gray-100 px-0 rounded-lg
 }
 .create-new{
-    @apply w-full h-20 flex justify-around items-center
+    @apply w-full h-20 flex justify-start items-center
 }
 .create-text{
-    @apply font-bold font-sans text-xl text-gray-900
+    @apply font-bold font-sans text-xl text-gray-900 w-3/4 ml-2
+}
+.close{
+    @apply  w-1/4 ml-5 block 
 }
 
 .x{
-    @apply font-sans text-3xl font-bold w-full h-full
+    @apply font-sans text-xl font-bold  h-full 
 }
 .category{
-    @apply w-full h-20  m-auto  flex flex-col mx-1 
+    @apply w-full h-20  m-auto  flex flex-col mx-1  mb-2
 }
 .text{
     @apply font-sans text-xl text-gray-900 mb-1
@@ -135,10 +144,10 @@
     @apply w-full  h-10 bg-gray-100  rounded-lg px-5 focus:pointer-events-none
 }
 .descript{
-    @apply w-full  flex flex-col  p-1
+    @apply w-full  flex flex-col  p-1 mb-5
 }
 .text-area{
-    @apply w-full h-20 border-gray-100  border-2 mt-1 
+    @apply w-full h-20 border-gray-100  border-2  resize-none align-top
 }
 .image-container{
     @apply w-full  flex flex-col  p-1
@@ -148,7 +157,7 @@
 
 }
 .entry-status{
-    @apply w-full h-20  flex justify-around items-center 
+    @apply w-full h-20 flex justify-start items-center gap-2
 }
 .radio{
     @apply w-5 h-5 border-gray-500 
