--- a/src/index.css
+++ b/src/index.css
@@ -33,10 +33,10 @@
         @apply flex flex-col justify-center items-center px-10 m-auto mt-20  gap-2 
 }
 .welcome-header{
-    @apply text-2xl font-sans text-gray-800 font-bold
+    @apply text-2xl  font-sans text-gray-800 font-bold
 }
 .welcome-msg{
-    @apply text-lg mt-3 font-sans text-gray-900 
+    @apply text-base text-slate-700 mt-3 font-sans  text-justify 
 }
 
 .signIn-btn{
@@ -103,7 +103,7 @@
     @apply justify-start
 }
 .Item-name{
-    @apply font-sans text-xl text-gray-900 font-semibold
+    @apply font-sans text-lg text-gray-900 font-semibold
 }
 .Item-time .Item-time{
     @apply text-lg font-semibold text-gray-500
